force-app/main/default/objects/JBCXM__ActionTemplates__c/JBCXM__ActionTemplates__c.object-meta.xml
<CustomObject>
    <description>The actions that need to be performed on rule evaluation to true.</description>
    <label>Action Template</label>
    <nameField>
        <label>RelatedId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>