force-app/main/default/objects/JBCXM__ActionTemplates__c/fields/JBCXM__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Action_Type__c</fullName>
    <description>Action Type.</description>
    <inlineHelpText>Action Type</inlineHelpText>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>