force-app/main/default/objects/JBCXM__ActionTemplates__c/fields/JBCXM__ActionCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActionCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Action Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>