force-app/main/default/objects/JBCXM__ActionTemplates__c/fields/JBCXM__ActionInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActionInfo__c</fullName>
    <label>Action Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>