force-app/main/default/objects/JBCXM__ActionTemplates__c/fields/JBCXM__AutomatedAlertRules__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AutomatedAlertRules__c</fullName>
    <label>Automated Alert Rule</label>
    <referenceTo>JBCXM__AutomatedAlertRules__c</referenceTo>
    <relationshipLabel>Action Templates</relationshipLabel>
    <relationshipName>ActionTemplate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>